List alignment fixes and input dark mode support
Fixes margin and alignment issues in ul, ol and checkbox lists including when they are nested within each other.

input elements in dark mode are forced to be in browser's dark color scheme.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,17 +59,29 @@ p {
   line-height: var(--p-line-height);
 }
 
-ul {
-  margin-top: var(--ul-margin-top);
-  margin-bottom: var(--ul-margin-bottom);
-}
-
 li {
   margin-left: var(--li-indent);
+
+  &:has(> input[type="checkbox"]) {
+    list-style-type: none;
+  }
+
+  & > input[type="checkbox"] {
+    width: var(--li-checkbox-size);
+    height: var(--li-checkbox-size);
+    margin: 0 0.2em 0.15em -1.25em;
+    vertical-align: middle;
+  }
 }
 
 a {
   text-decoration: underline;
+}
+
+input {
+  .dark & {
+    color-scheme: dark;
+  }
 }
 
 /* Code blocks */
